--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,12 @@ api_keys.py
 .api_keys
 .api_keys.py
 
+.app/api_keys.py
+.app/api_keys
+.app/api_keys.py
+
+app/api_keys.py
+app/api_keys
+app/api_keys.py
+
+
