updated read-me and hid api key

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,8 @@ app/api_keys
 app/api_keys.py
 
 
+# Google Analytics KEYS
+Keys/GoogleAnalyticsKey.json
+Keys/GoogleAnalyticsKey
+.Keys/GoogleAnalyticsKey.json
+.Keys/GoogleAnalyticsKey
