--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,6 @@ Keys/GoogleAnalyticsKey.json
 Keys/GoogleAnalyticsKey
 .Keys/GoogleAnalyticsKey.json
 .Keys/GoogleAnalyticsKey
+GoogleAnalyticsKey.json
+.GoogleAnalyticsKey.json
+GoogleAnalyticsKey
